--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard - TrackRepost</title>
+  <title>Your Dashboard - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Firebase -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
@@ -14,159 +14,94 @@
   <script>firebase.initializeApp(window.firebaseConfig);</script>
 
   <style>
-    body {
-      background: #111;
-      color: #eee;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      text-align: center;
-      background: #1a1a1a;
+    .dashboard {
+      max-width: 1000px;
+      margin: 40px auto;
       padding: 20px;
-      border-bottom: 1px solid #333;
+      background-color: #121212;
+      color: white;
+      border-radius: 10px;
     }
 
-    header img {
-      height: 60px;
-      margin-bottom: 10px;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 28px;
-      color: #ffd700;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 0 15px;
-    }
-
-    .user-summary {
-      background: #222;
-      padding: 20px;
-      border-radius: 12px;
+    .campaign-card {
+      display: flex;
+      background: #1f1f1f;
       margin-bottom: 20px;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
 
-    .user-summary p {
-      margin: 6px 0;
+    .campaign-art {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+    }
+
+    .campaign-info {
+      padding: 15px;
+      flex-grow: 1;
+    }
+
+    .campaign-info h3 {
+      margin: 0 0 8px 0;
+      font-size: 20px;
+    }
+
+    .campaign-info p {
+      margin: 5px 0;
+      font-size: 15px;
     }
 
     .badge {
       display: inline-block;
-      padding: 4px 10px;
-      border-radius: 6px;
-      font-size: 13px;
-      margin-top: 6px;
+      padding: 5px 12px;
+      font-size: 12px;
+      border-radius: 20px;
+      background: #444;
+      color: white;
+      margin-left: 10px;
     }
 
     .badge.pro {
-      background: #00c389;
-      color: #000;
-      font-weight: bold;
+      background: #e91e63;
     }
 
     .badge.free {
-      background: #444;
-      color: #fff;
+      background: #777;
     }
 
-    .campaign {
-      background: #1a1a1a;
-      border-radius: 12px;
-      margin-bottom: 20px;
-      padding: 20px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.6);
-    }
-
-    .campaign iframe {
-      width: 100%;
-      height: 166px;
-      border-radius: 10px;
-      border: none;
-      margin-bottom: 10px;
-    }
-
-    .campaign .info h2 {
-      margin: 0 0 6px;
-      font-size: 20px;
-      color: #ffd700;
-    }
-
-    .campaign .info p {
-      margin: 2px 0;
-      color: #aaa;
-      font-size: 14px;
-    }
-
-    .campaign .button {
+    .details-link {
       display: inline-block;
-      background: #ff9900;
-      color: #000;
-      padding: 10px 16px;
-      border-radius: 8px;
+      margin-top: 8px;
+      color: #4caf50;
       font-weight: bold;
-      text-decoration: none;
-      margin-top: 10px;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 13px;
-      color: #999;
-      margin-top: 60px;
-      padding: 20px 0;
-      background: #1a1a1a;
-    }
-
-    #logout-btn {
-      margin-top: 20px;
-      padding: 8px 14px;
-      font-size: 14px;
-      background: #444;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    #logout-btn:hover {
-      background: #666;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="/assets/logo-trackrepost.png" alt="TrackRepost Logo" />
-    <h1>📊 Your Dashboard</h1>
-  </header>
+  <div id="site-header"></div>
 
-  <main class="container">
-    <div class="user-summary">
-      <p id="userInfo">Loading user info...</p>
-      <p><strong>Credits:</strong> <span id="creditBalance">Loading...</span></p>
-      <div id="planBadge"></div>
-      <button id="logout-btn">Logout</button>
-    </div>
+  <main class="dashboard">
+    <h2>📊 Dashboard</h2>
+    <p id="userInfo"></p>
+    <p><strong>Balance:</strong> <span id="creditBalance"></span> <span id="planBadge"></span></p>
 
-    <section id="campaigns">
+    <h3>🎯 Your Campaigns</h3>
+    <div id="campaigns">
       <p>Loading your campaigns...</p>
-    </section>
+    </div>
   </main>
 
   <footer>
     <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
 
+  <!-- Scripts -->
+  <script type="module" src="/js/header.js"></script>
   <script src="/js/dashboard.js"></script>
 </body>
 </html>
-
 
 
 
